# learnfm

./: .gitignore  MANIFEST.in  README.md  back_setup.py  dx7db.py  pyproject.toml  setup.py  test.py
dx7core/: fir.h  main.cc  pydx7.cc  ringbuffer.cc  ringbuffer.h  synth.h  synth_unit.cc  synth_unit.h  wavout.cc  wavout.h
src/dx7/: dx7db.py
src/dx7/dx7core/: aligned_buf.h  dx7note.cc  env.cc  fir.cc  fm_core.cc  pydx7.cc  resofilter.cc
src/dx7core/: lfo.cc  main.cc  ringbuffer.cc
test/: test.py
